# hnasko-lab-to-nwb

./: .gitignore  .pre-commit-config.yaml  README.md  make_env.yml  pyproject.toml
.github/workflows/: test-install.yml
src/hnasko_lab_to_nwb/embargo_2025/: __init__.py  behaviorinterface.py  convert_all_sessions.py  convert_session.py  metadata.yaml  notes.md  nwbconverter.py
src/hnasko_lab_to_nwb/embargo_2025/interfaces/: __init__.py  demodulated_tdt_interface.py
src/hnasko_lab_to_nwb/embargo_2025/metadata/: general_metadata.yaml  shock_stimulus_metadata.yaml  varying_durations_ogen_metadata.yaml  varying_frequencies_ogen_metadata.yaml
src/hnasko_lab_to_nwb/embargo_2025/tutorials/: Lotfi_2025.ipynb  embrago_2025.ipynb  tuto_name.ipynb
src/hnasko_lab_to_nwb/embargo_2025/utils/: __init__.py  add_demodulated_signals.py  add_fiber_photometry_response_series.py  add_optogenetic_stimulation.py  add_shock_stimuli.py  get_demodulated_signals.py
src/hnasko_lab_to_nwb/lotfi_2025/: convert_all_sessions.py  convert_session.py  convert_session_w_behavioral_video.py  notes.md  nwbconverter.py  upload_to_DANDI.py
src/hnasko_lab_to_nwb/lotfi_2025/interfaces/: __init__.py  concatenated_tdt_fp_interface.py  demodulated_fp_interface.py  demodulated_tdt_interface.py  processed_fp_interface.py  tdt_optogenetic_stimulus_interface.py
src/hnasko_lab_to_nwb/lotfi_2025/metadata/: Cell_type_Anxa1_recordings copy.yaml  Cell_type_Anxa1_recordings.yaml  Cell_type_Vglut2_recordings.yaml  Cell_type_recordings_Anxa1_metadata.yaml  Cell_type_recordings_Vglut2_metadata.yaml  GRABDA_recordings_metadata.yaml  SN_pan_DA_recordings_metadata.yaml  SN_pan_GABA_recordings_metadata.yaml  Str_DA_terminal_recordings_metadata.yaml
src/hnasko_lab_to_nwb/lotfi_2025/tutorials/: Lotfi_2025.ipynb
src/hnasko_lab_to_nwb/lotfi_2025/updated_metadata/: GRABDA_recordings_metadata.yaml  SN_pan_DA_recordings_metadata.yaml  SN_pan_GABA_recordings_metadata.yaml
(+4 files in other folders)
